# advent-of-code-2024

./: .gitattributes  README.md  devenv.nix  git-agecrypt.toml
inputs/: day01.txt  day02.txt  day03.txt  day04.txt  day05.txt  day06.txt  day07.txt  day08.txt  day09.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day16.txt  day17.txt
roc/: 01.roc
rust/: .gitignore  Cargo.toml
rust/.cargo/: config.toml
rust/benches/: aoc_2024.rs  bench.rs
rust/src/: day01.rs  day01_fast.rs  day02.rs  day02_fast.rs  day03.rs  day03_fast.rs  day04.rs  day05.rs  day06.rs  day06_fast.rs  day07.rs  day07_fast.rs  day08.rs  day08_fast.rs  day08_fast_wip.rs  day09.rs  day10.rs  day10_fast.rs  day11.rs  day11_fast.rs  day12.rs  day13.py  day13.rs  day15.rs  day16.rs  day17.rs  lib.rs  main.rs
rust/src/fast/: day01_fast.rs  day02_fast.rs  day03_fast.rs  day06_fast.rs  day07_fast.rs  day08_fast.rs  day09_fast.rs  day10_fast copy.rs  day10_fast.rs  day11_fast.rs  day13_fast.rs  day13_fast_simd.rs  day16_fast.rs  mod.rs
