[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2024"

[dependencies]
vek = "0.17"
indicatif = { version = "0.17", features = ["rayon"] }
cached = "0.54"
ndarray = { version = "0.16.1", features = ["rayon"] }

# ferris-elf
itertools = "0.13"
nom = "7"
rayon = "1"
memchr = "2"
arrayvec = "0.7"
rustc-hash = { version = "2.1", features = ["nightly"] }
bitvec = "1"
atoi_radix10 = { git = "https://github.com/gilescope/atoi_radix10" }
bytemuck = { version = "1", features = ["must_cast", "nightly_portable_simd", "derive"] }
atoi_simd = "0.16"
bstr = "1"
num = "0.4"
num-traits = "0.2"
radsort = "0.1"
bit-set = "0.8"
image = "0.25.5"

# ahash = { version = "0.8" }
# t1ha = { version = "0.1" }
# itertools = "0.13"
# regex = "1"
# parse-display = "0.10"
# core_simd = { git = "https://github.com/rust-lang/portable-simd" }
# smallvec = "1"
# dashmap = "6"
# btoi = "0.4"
# rangemap = "1"
# flume = "0.11"
# pollster = "0.4"
# #wgpu = "0.18"
# mimalloc = { version = "0.1", default-features = false }
# roots = "0.0.8"
# pathfinding = "4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = true
